# images-api

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  openapi.yaml  swagger.yaml
benches/: image_loading.rs  image_operations.rs
dashboard/: app.py  requirements.txt
dashboard/.streamlit/: config.toml
scripts/: analyze_content.py  analyze_photo_names.py  check_db.py  check_directories.sh  load_all_content.sh  load_content.py  load_models.py  load_test.sh  monitor_progress.py  test.sh  truncate_collections.js
src/: config.rs  finder.rs  handlers.rs  handlers_test.rs  image_processor.rs  image_processor_test.rs  lib.rs  main.rs  startup.rs  test_utils.rs
terraform/environments/local/: main.tf
tests/: performance_tests.rs
tests/common/: mod.rs
tests/integration/: integration_api.rs  mod.rs
tests/unit/: image_handler_test.rs
