[package]
name = "images-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
tokio = { version = "1.35", features = ["full"] }
image = { version = "0.24", features = ["jpeg", "png", "gif"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21.7"
lru = "0.12"
futures = "0.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
actix-rt = "2.9.0"
actix-http = "3.9"
reqwest = { version = "0.11", features = ["json"] }
tempfile = "3.8.1"
fake = "2.9"
assert_fs = "1.0"
predicates = "3.0"
test-log = "0.2"
wiremock = "0.5"
mockall = "0.12"
tokio = { version = "1.34.0", features = ["full"] }

[[bench]]
name = "image_operations"
harness = false
