[package]
name = "images-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
futures-util = "0.3.30"
image = "0.24.9"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
anyhow = "1.0.80"
env_logger = "0.11.2"
log = "0.4.21"
chrono = { version = "0.4.34", features = ["serde"] }
lru = "0.12.3"
futures = "0.3.29"
bytes = "1.5.0"
base64 = "0.21.7"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
actix-rt = "2.9.0"
actix-http = "3.9"
reqwest = { version = "0.11", features = ["json"] }
tempfile = "3.10.1"
fake = "2.9"
assert_fs = "1.0"
predicates = "3.0"
test-log = "0.2"
wiremock = "0.5"
mockall = "0.12"
tokio = { version = "1.34.0", features = ["full"] }
tokio-test = "0.4.3"
serde_json = "1.0"

[[bench]]
name = "image_operations"
harness = false
