[package]
name = "images-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-cors = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.9"
chrono = { version = "0.4", features = ["serde"] }
image = "0.24"
base64 = "0.21"
futures = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
mime_guess = "2.0"
anyhow = "1.0"
lru = "0.12.3"
bytes = "1.5.0"
core-foundation = "0.9.4"
core-foundation-sys = "0.8.4"
mongodb = { version = "2.8", features = ["tokio-runtime", "bson-chrono-0_4"] }
url = "2.5"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
actix-rt = "2.9.0"
actix-http = "3.9"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tempfile = "3.10.1"
fake = "2.9"
assert_fs = "1.0"
predicates = "3.0"
test-log = "0.2"
wiremock = "0.5"
mockall = "0.12"
tokio = { version = "1.34.0", features = ["full"] }
tokio-test = "0.4.3"
serde_json = "1.0"

[[bench]]
name = "image_operations"
harness = false
